<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_title">Playlist Maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_library">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="content_desc_search">Перейти к разделу поиска</string>
    <string name="content_desc_library">Перейти к разделу медиатеки</string>
    <string name="content_desc_settings">Перейти к разделу настроек</string>
    <string name="content_desc_dark_theme">Переключатель тёмной темы</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Тёмная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_terms">Пользовательское соглашение</string>
    <string name="share_text">Скачай Playlist Maker!</string>

    <string name="terms_title">Соглашение</string>
    <string name="terms_text">1. ТЕРМИНЫ\n\n1.1. Настоящее соглашение является демонстрационным текстом и используется как заглушка.\n\n1.2. Разделы соглашения могут быть дополнены и расширены разработчиком.\n\n2. ОБЯЗАННОСТИ СТОРОН\n\n2.1. Пользователь обязуется соблюдать условия соглашения и использовать приложение по назначению.\n\n2.2. Разработчик обязуется поддерживать работоспособность приложения и улучшать его функциональность.\n\n3. ПРОЧИЕ УСЛОВИЯ\n\n3.1. Все спорные вопросы решаются путём переговоров.\n\n3.2. Настоящее соглашение может быть изменено в любое время без дополнительного уведомления.</string>
    <string name="support_email">support@example.com</string>
    <string name="back">Назад</string>

    <string name="search_screen_title">Экран поиска</string>
    <string name="library_screen_title">Экран медиатеки</string>
</resources>
